<<<<<<< HEAD
[gd_scene load_steps=4 format=3 uid="uid://cm5575sipopee"]
=======
[gd_scene load_steps=3 format=3 uid="uid://cm5575sipopee"]
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13

[ext_resource type="Script" uid="uid://nmgb7i4wgbro" path="res://scripts/challenges/ChallengeBase.gd" id="1_xetyg"]
[ext_resource type="Texture2D" uid="uid://d223ecvdflouy" path="res://assets/backgrounds/Background.png" id="2_8jpql"]

<<<<<<< HEAD
[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ro30q"]

=======
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13
[node name="ChallengeBase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xetyg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

<<<<<<< HEAD
=======
[node name="MenuButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Menu"

>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13
[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 20

[node name="BackGround" type="TextureRect" parent="MarginContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_8jpql")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/BackGround/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
<<<<<<< HEAD
alignment = 1
=======
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13

[node name="MissionTitleLabel" type="Label" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer/VBoxContainer"]
<<<<<<< HEAD
visible = false
=======
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer/VBoxContainer"]
<<<<<<< HEAD
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
=======
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13

[node name="ChallengeContentContainer" type="PanelContainer" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
<<<<<<< HEAD
size_flags_stretch_ratio = 7.5
theme_override_styles/panel = SubResource("StyleBoxTexture_ro30q")
=======
size_flags_stretch_ratio = 5.0
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/MarginContainer/BackGround/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

<<<<<<< HEAD
[node name="MenuButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Menu"

=======
>>>>>>> 150a55f936c4293772a0d280049a81d8b0491a13
[connection signal="pressed" from="MarginContainer/MenuButton" to="." method="_on_menu_pressionado"]
